--- a/css/style.css
+++ b/css/style.css
@@ -27,19 +27,8 @@ h1 {
 }
 
 
-.desk {
-    margin-top: 40px;
-    height: 50%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    width: 50%;
-}
-
 .col {
-  width: 300px;
+  width: 400px;
 }
 
 form {
@@ -49,6 +38,7 @@ form {
     background-color: white;
     padding: 30px;
     border-radius: 20px;
+    height: 500px;
 }
 
 input {
@@ -84,13 +74,19 @@ form > p {
 
 .desk {
     display: flex;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 40px;
+    flex-direction: column;
+    align-items: baseline;
+    border: none;
+    width: 95%;
+    padding-right: 50px;
+    padding-left: 50px
 }
 
-.desk > div {
-    width: 700px;
-    height: 500px;
+.desk > div > div {
+    width: 1000px;
     display: flex;
     flex-direction: row;
     border-radius: 20px;
@@ -107,6 +103,7 @@ form > p {
     background-color: white;
     padding: 30px;
     border-radius: 20px;
+    margin-bottom: 40px;
 }
 
 .task-list-name {
@@ -119,4 +116,21 @@ form > p {
 
 .done {
     text-decoration: line-through;
+}
+
+.disabled {
+    color: #cccccc;
+}
+
+.errors {
+    color: darkred;
+    background-color: #ff9595;
+    width: 30%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.errors> p {
+    padding-top: 10px;
 }
